# image_recognition

./: .gitignore  Makefile  pyproject.toml
image_recognition/: __init__.py  ch02_02_apply_gaussian_filter.py  ch02_03_edge_detection.py  ch02_04_attention.py  ch02_sec01_road_image.py  ch03_01_multi_class_logistic_regression.py  ch03_01_visualize_train_data_distribution.py  ch04_01_fnn.py  ch04_02_cnn.py  ch04_03_transformer.py  ch04_04_better_cnn.py  ch04_04_classification_with_model.py  pytorch.py  utils.py
image_recognition/filters/: __init__.py
image_recognition/processing/: __init__.py
